# 2023-11-28-refactor-homework-eartqk

./: .flake8  .pylintrc  Makefile  pyproject.toml
.github/workflows/: app.yml
refactor_tool/: renamer.py
tests/: test_rename_in_code.py  test_rename_over_project.py
tests/fixtures/: expected_class.py  expected_func.py  source_class.py  source_func.py
