[tool.poetry]
name = "renamer_and_migrator"
version = "0.1.0"
description = "Tool for rename/migrate a class/function"
authors = ["Oleg Artamonov <eartqk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
libcst = "^1.0.0"
black = "^23.11.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pytest.ini_options]
pythonpath = [
  "src", "."
]